# Trie

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: utilities.cmake
include/Trie/: Trie.hpp
source/sample/: main.cpp
test/: CMakeLists.txt  unit_test_cpp_template.cpp
test/compile_tests/: compile_tests.py
test/compile_tests/tests/: typo.cpp
test/compile_tests/utility/: __init__.py  get_compiler.py  run_compile_tests.py
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
